fix font size for centennial high school on mobile

--- a/wwwroot/graduation/style.css
+++ b/wwwroot/graduation/style.css
@@ -385,7 +385,7 @@ h3, p {
 /* MEDIA QUERIES STYLES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-@media (min-width: 400px) {
+@media (min-width: 300px) {
 
   nav li {
     width: auto;
@@ -410,7 +410,7 @@ h3, p {
   }
 
   nav h1{
-    font-size: 30px;
+    font-size: 1.5em;
   }
 
   header a:hover, .about a:hover {
